--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"tsx src/server.ts\" \"vite\"",
     "dev:frontend": "vite",
     "dev:backend": "tsx src/server.ts",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && tsc -p tsconfig.server.json",
     "preview": "vite preview",
     "start": "node dist/server.js",
     "vercel-build": "npm run build",
