--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "concurrently \"tsx src/server.ts\" \"vite\"",
     "dev:frontend": "vite",
     "dev:backend": "tsx src/server.ts",
-    "build": "tsc && vite build && tsc -p tsconfig.server.json",
+    "build": "vite build && tsc -p tsconfig.server.json --outDir dist",
+    "prebuild": "rimraf dist",
     "preview": "vite preview",
-    "start": "node dist/server.js",
+    "start": "NODE_ENV=production node dist/server.js",
     "vercel-build": "npm run build",
+    "postinstall": "npm run build",
     "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --config=jest.config.js --verbose",
     "test:watch": "npm test -- --watch",
     "test:coverage": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
@@ -140,6 +142,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.6",
+    "rimraf": "^6.1.2",
     "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.5",
